--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=app
+spring.datasource.url=jdbc:mariadb://localhost:3306/base
+spring.datasource.username=admin
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
